# ums_user_management_svc

./: .gitignore  API.md  Makefile  README.md  alembic.ini  pyproject.toml  test.db
migrations/: env.py
migrations/versions/: 352c7619c381_fix_sessions_foreignkey_to_users_email.py  3b6b0d38c220_add_is_active_field_to_session_model.py  6f331374a45d_add_failed_login_attempts_and_account_.py  README  c06c542d3088_create_user_table.py
src/ums_user_management_svc/: app.py  config.py  main.py
src/ums_user_management_svc/models/: __init__.py  base.py  session.py  user.py
src/ums_user_management_svc/routers/: __init__.py  login.py  logout.py  signup.py  terminate.py  verification.py
src/ums_user_management_svc/schemas/: login.py
src/ums_user_management_svc/service/: email_service.py
src/ums_user_management_svc/utils/: jwt.py
tests/: conftest.py  test_jwt.py  test_login.py  test_logout.py  test_session.py  test_signup.py  test_terminate.py  test_user.py  test_verification.py
